draft-ietf-ipsecme-ipsec-ha-08

--- a/draft-ietf-ipsecme-ipsec-ha-08.html
+++ b/draft-ietf-ipsecme-ipsec-ha-08.html
@@ -153,10 +153,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">Y. Nir</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Check Point</td></tr>
-<tr><td class="header">Intended status: Informational</td><td class="header">June 24, 2010</td></tr>
-<tr><td class="header">Expires: December 26, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Informational</td><td class="header">June 28, 2010</td></tr>
+<tr><td class="header">Expires: December 30, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />IPsec Cluster Problem Statement<br />draft-ietf-ipsecme-ipsec-ha-07</h1>
+<h1><br />IPsec Cluster Problem Statement<br />draft-ietf-ipsecme-ipsec-ha-08</h1>
 
 <h3>Abstract</h3>
 
@@ -182,7 +182,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 26, 2010.</p>
+This Internet-Draft will expire on December 30, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -238,6 +238,10 @@ Acknowledgements<br />
 <a href="#history">7.</a>&nbsp;
 Change Log<br />
 <a href="#rfc.references1">8.</a>&nbsp;
+References<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">8.1.</a>&nbsp;
+Normative References<br />
+&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">8.2.</a>&nbsp;
 Informative References<br />
 <a href="#rfc.authors">&#167;</a>&nbsp;
 Author's Address<br />
@@ -659,9 +663,26 @@ Change Log</h3>
 </p>
 <p> Versions 05, 06 and 07 just corrected nits and notation 
 </p>
+<a name="rfc.references"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<a name="rfc.section.8"></a><h3>8.&nbsp;
+References</h3>
+
 <a name="rfc.references1"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>8.&nbsp;Informative References</h3>
+<h3>8.1.&nbsp;Normative References</h3>
+<table width="99%" border="0">
+<tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
+<td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="ftp://ftp.isi.edu/in-notes/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC4301">[RFC4301]</a></td>
+<td class="author-text">Kent, S. and K. Seo, &ldquo;<a href="http://tools.ietf.org/html/rfc4301">Security Architecture for the Internet Protocol</a>,&rdquo; RFC&nbsp;4301, December&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4301.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc4301.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc4301.xml">XML</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC4306">[RFC4306]</a></td>
+<td class="author-text">Kaufman, C., &ldquo;<a href="http://tools.ietf.org/html/rfc4306">Internet Key Exchange (IKEv2) Protocol</a>,&rdquo; RFC&nbsp;4306, December&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4306.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc4306.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc4306.xml">XML</a>).</td></tr>
+</table>
+
+<a name="rfc.references2"></a><br /><hr />
+<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
+<h3>8.2.&nbsp;Informative References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="ARORA">[ARORA]</a></td>
 <td class="author-text">Arora, J. and P. Kumar, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-arora-ipsecme-ikev2-alt-tunnel-addresses.txt">Alternate Tunnel Addresses for IKEv2</a>,&rdquo; draft-arora-ipsecme-ikev2-alt-tunnel-addresses (work in progress), April&nbsp;2010 (<a href="http://tools.ietf.org/id/draft-arora-ipsecme-ikev2-alt-tunnel-addresses">TXT</a>, <a href="http://tools.ietf.org/html/draft-arora-ipsecme-ikev2-alt-tunnel-addresses">HTML</a>).</td></tr>
@@ -669,16 +690,10 @@ Change Log</h3>
 <td class="author-text">McGrew, D. and B. Weis, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-msec-ipsec-group-counter-modes.txt">Using Counter Modes with Encapsulating Security Payload (ESP) and Authentication Header (AH) to Protect Group Traffic</a>,&rdquo; draft-ietf-msec-ipsec-group-counter-modes (work in progress), March&nbsp;2010 (<a href="http://tools.ietf.org/id/draft-ietf-msec-ipsec-group-counter-modes">TXT</a>, <a href="http://tools.ietf.org/html/draft-ietf-msec-ipsec-group-counter-modes">HTML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="IKEv2bis">[IKEv2bis]</a></td>
 <td class="author-text">Kaufman, C., Hoffman, P., Nir, Y., and P. Eronen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-ipsecme-ikev2bis.txt">Internet Key Exchange Protocol: IKEv2</a>,&rdquo; draft-ietf-ipsecme-ikev2bis (work in progress), May&nbsp;2010 (<a href="http://tools.ietf.org/id/draft-ietf-ipsecme-ikev2bis">TXT</a>, <a href="http://tools.ietf.org/html/draft-ietf-ipsecme-ikev2bis">HTML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
-<td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="ftp://ftp.isi.edu/in-notes/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3686">[RFC3686]</a></td>
 <td class="author-text">Housley, R., &ldquo;<a href="http://tools.ietf.org/html/rfc3686">Using Advanced Encryption Standard (AES) Counter Mode</a>,&rdquo; RFC&nbsp;3686, January&nbsp;2009 (<a href="http://www.ietf.org/rfc/rfc3686.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc3686.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc3686.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4106">[RFC4106]</a></td>
 <td class="author-text">Viega, J. and D. McGrew, &ldquo;<a href="http://tools.ietf.org/html/rfc4106">The Use of Galois/Counter Mode (GCM) in IPsec Encapsulating Security Payload (ESP)</a>,&rdquo; RFC&nbsp;4106, June&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4106.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc4106.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc4106.xml">XML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC4301">[RFC4301]</a></td>
-<td class="author-text">Kent, S. and K. Seo, &ldquo;<a href="http://tools.ietf.org/html/rfc4301">Security Architecture for the Internet Protocol</a>,&rdquo; RFC&nbsp;4301, December&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4301.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc4301.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc4301.xml">XML</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC4306">[RFC4306]</a></td>
-<td class="author-text">Kaufman, C., &ldquo;<a href="http://tools.ietf.org/html/rfc4306">Internet Key Exchange (IKEv2) Protocol</a>,&rdquo; RFC&nbsp;4306, December&nbsp;2005 (<a href="http://www.ietf.org/rfc/rfc4306.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc4306.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc4306.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5685">[RFC5685]</a></td>
 <td class="author-text">Devarapalli, V. and K. Weniger, &ldquo;<a href="http://tools.ietf.org/html/rfc5685">Redirect Mechanism for IKEv2</a>,&rdquo; RFC&nbsp;5685, November&nbsp;2009 (<a href="http://www.ietf.org/rfc/rfc5685.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc5685.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc5685.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5723">[RFC5723]</a></td>
