draft-ietf-sip-certs-15

--- a/draft-ietf-sip-certs-15.html
+++ b/draft-ietf-sip-certs-15.html
@@ -155,11 +155,11 @@
 <tr><td class="header">Network Working Group</td><td class="header">C. Jennings</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Cisco Systems</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">J. Fischl, Ed.</td></tr>
-<tr><td class="header">Expires: January 1, 2011</td><td class="header">Skype</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 30, 2010</td></tr>
+<tr><td class="header">Expires: March 25, 2011</td><td class="header">Skype</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">September 21, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Certificate Management Service for The
-    Session Initiation Protocol (SIP)<br />draft-ietf-sip-certs-14</h1>
+    Session Initiation Protocol (SIP)<br />draft-ietf-sip-certs-15</h1>
 
 <h3>Abstract</h3>
 
@@ -187,7 +187,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 1, 2011.</p>
+This Internet-Draft will expire on March 25, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -846,7 +846,7 @@ NOTIFY Bodies</h3>
         minimum the application/pkix-cert body with the certificate and an
         application/pkcs8 body that has the associated private key information
         for the certificate. The application/pkcs8 media type is defined in
-        <a class='info' href='#I-D.turner-asymmetrickeyformat'>[I&#8209;D.turner&#8209;asymmetrickeyformat]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; April&nbsp;2010.</span><span>)</span></a>.
+        <a class='info' href='#RFC5958'>[RFC5958]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; August&nbsp;2010.</span><span>)</span></a>.
 </p>
 <p>The absence of an Accept header in the SUBSCRIBE indicates support
         for multipart/mixed and the content types application/pkix-cert and
@@ -856,7 +856,7 @@ NOTIFY Bodies</h3>
 </p>
 <p>The application/pkix-cert body is a DER encoded X.509v3 certificate
         <a class='info' href='#RFC2585'>[RFC2585]<span> (</span><span class='info'>Housley, R. and P. Hoffman, &ldquo;Internet X.509 Public Key Infrastructure Operational Protocols: FTP and HTTP,&rdquo; May&nbsp;1999.</span><span>)</span></a>. The application/pkcs8 body contains a
-        DER-encoded <a class='info' href='#I-D.turner-asymmetrickeyformat'>[I&#8209;D.turner&#8209;asymmetrickeyformat]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; April&nbsp;2010.</span><span>)</span></a>
+        DER-encoded <a class='info' href='#RFC5958'>[RFC5958]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; August&nbsp;2010.</span><span>)</span></a>
         object that contains the private key. The PKCS#8 objects MUST be of
         type PrivateKeyInfo. The integrity and confidentiality of the PKCS#8
         objects is provided by the TLS transport. The transport encoding of
@@ -1444,7 +1444,7 @@ Crypto Profiles</h3>
         different passphrase SHOULD be used for the PKCS#8 encryption than is
         used for authentication of the client. It is important to choose an
         sufficiently strong passphrases. Specific advice on the passphrase can
-        be found in section 6 of <a class='info' href='#I-D.turner-asymmetrickeyformat'>[I&#8209;D.turner&#8209;asymmetrickeyformat]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; April&nbsp;2010.</span><span>)</span></a>.
+        be found in section 6 of <a class='info' href='#RFC5958'>[RFC5958]<span> (</span><span class='info'>Turner, S., &ldquo;Asymmetric Key Packages,&rdquo; August&nbsp;2010.</span><span>)</span></a>.
 </p>
 <a name="cert.gen"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1476,11 +1476,36 @@ User Certificate Generation</h3>
 <a name="rfc.section.10.7"></a><h3>10.7.&nbsp;
 Private Key Storage</h3>
 
-<p>The protection afforded private keys is a critical security factor.
-        On a small scale, failure of devices to protect the private keys will
-        permit an attacker to masquerade as the user or decrypt their personal
-        information. As noted in the SACRED Framework <a class='info' href='#RFC3760'>[RFC3760]<span> (</span><span class='info'>Gustafson, D., Just, M., and M. Nystrom, &ldquo;Securely Available Credentials (SACRED) - Credential Server Framework,&rdquo; April&nbsp;2004.</span><span>)</span></a>, when stored on an end user device, such as a
-        diskette or hard drive, credentials SHOULD NOT be in the clear.
+<p>
+          The protection afforded private keys is a critical security factor. On
+          a small scale, failure of devices to protect the private keys will
+          permit an attacker to masquerade as the user or decrypt their personal
+          information. As noted in the SACRED Framework, when stored on an end
+          user device, such as a diskette or hard drive, credentials SHOULD NOT
+          be in the clear.  It is RECOMMENDED that private keys be stored
+          securely in the device, more specifically encrypting them using
+          tamper-resistant hardware encryption and exposing them only when
+          required: for example, the private key is decrypted when needed to
+          generate a digital signature, and re-encrypted immediately to limit
+          exposure in the RAM for a short period of time.  Some implementations
+          may limit access to private keys by prompting users for a PIN prior to
+          allowing access to the private key. 
+</p>
+<p>
+            On the server side, the protection of unencrypted PKCS#8 objects is
+            equally important.  A server failing to protect the private keys
+            would be catastrophic as attackers with access to unencrypted PKCS#8
+            object could masquerade as any user whose private key was not
+            encrypted.  Therefore, it is also recommended that the private keys
+            be stored securely in the server, more specifically encrypting them
+            using tamper-resistant hardware encryption and exposing them only
+            when required.
+          
+</p>
+<p>
+           <a class='info' href='#FIPS-140-2'>FIPS 140-2<span> (</span><span class='info'>NIST, &ldquo;Security Requirements for Cryptographic Modules,&rdquo; June&nbsp;2005.</span><span>)</span></a> [FIPS&#8209;140&#8209;2] provides useful guidance
+           on secure storage.
+          
 </p>
 <a name="anchor32"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1577,12 +1602,12 @@ rsa-sha256              [RFCAAAA]
 <a name="rfc.section.12"></a><h3>12.&nbsp;
 Acknowledgments</h3>
 
-<p>Many thanks to Eric Rescorla, Russ Housley, Jim Schaad, Rohan Mahy
-      for significant help and discussion. Many others provided useful
-      comments, including Kumiko Ono, Peter Gutmann, Yaron Pdut, Aki Niemi,
-      Magnus Nystrom, Paul Hoffman, Adina Simu, Dan Wing, Mike Hammer, Pasi
-      Eronen, Alexey Melnikov, Tim Polk and Lyndsay Campbell. Rohan Mahy, John
-      Elwell, and Jonathan Rosenberg provided detailed review and text.
+<p>Many thanks to Eric Rescorla, Russ Housley, Jim Schaad, Rohan Mahy and
+      Sean Turner for significant help, discussion, and text. Many others
+      provided useful comments and text, including Kumiko Ono, Peter Gutmann,
+      Yaron Pdut, Aki Niemi, Magnus Nystrom, Paul Hoffman, Adina Simu, Dan Wing,
+      Mike Hammer, Pasi Eronen, Alexey Melnikov, Tim Polk, John Elwell, Jonathan
+      Rosenberg and Lyndsay Campbell.
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1621,8 +1646,8 @@ References</h3>
 <td class="author-text">Turner, S., &ldquo;<a href="http://tools.ietf.org/html/rfc5754">Using SHA2 Algorithms with Cryptographic Message Syntax</a>,&rdquo; RFC&nbsp;5754, January&nbsp;2010 (<a href="http://www.rfc-editor.org/rfc/rfc5754.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5649">[RFC5649]</a></td>
 <td class="author-text">Housley, R. and M. Dworkin, &ldquo;<a href="http://tools.ietf.org/html/rfc5649">Advanced Encryption Standard (AES) Key Wrap with Padding Algorithm</a>,&rdquo; RFC&nbsp;5649, September&nbsp;2009 (<a href="http://www.rfc-editor.org/rfc/rfc5649.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="I-D.turner-asymmetrickeyformat">[I-D.turner-asymmetrickeyformat]</a></td>
-<td class="author-text">Turner, S., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-turner-asymmetrickeyformat-05.txt">Asymmetric Key Packages</a>,&rdquo; draft-turner-asymmetrickeyformat-05 (work in progress), April&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-turner-asymmetrickeyformat-05.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5958">[RFC5958]</a></td>
+<td class="author-text">Turner, S., &ldquo;<a href="http://tools.ietf.org/html/rfc5958">Asymmetric Key Packages</a>,&rdquo; RFC&nbsp;5958, August&nbsp;2010 (<a href="http://www.rfc-editor.org/rfc/rfc5958.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
@@ -1639,6 +1664,8 @@ References</h3>
 <td class="author-text">Peterson, J., &ldquo;<a href="http://tools.ietf.org/html/rfc3853">S/MIME Advanced Encryption Standard (AES) Requirement for the Session Initiation Protocol (SIP)</a>,&rdquo; RFC&nbsp;3853, July&nbsp;2004 (<a href="http://www.rfc-editor.org/rfc/rfc3853.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4662">[RFC4662]</a></td>
 <td class="author-text">Roach, A., Campbell, B., and J. Rosenberg, &ldquo;<a href="http://tools.ietf.org/html/rfc4662">A Session Initiation Protocol (SIP) Event Notification Extension for Resource Lists</a>,&rdquo; RFC&nbsp;4662, August&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4662.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="FIPS-140-2">[FIPS-140-2]</a></td>
+<td class="author-text">NIST, &ldquo;<a href="http://csrc.nist.gov/publications/fips/fips140-2/fips1402.pdf">Security Requirements for Cryptographic Modules</a>,&rdquo; June&nbsp;2005.</td></tr>
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
