draft-ietf-hokey-ldn-discovery-09

--- a/draft-ietf-hokey-ldn-discovery-09.html
+++ b/draft-ietf-hokey-ldn-discovery-09.html
@@ -398,7 +398,7 @@
 <td class="right">Q. Wu</td>
 </tr>
 <tr>
-<td class="left">Expires: October 21, 2011</td>
+<td class="left">Expires: October 24, 2011</td>
 <td class="right">Y. Wang</td>
 </tr>
 <tr>
@@ -407,7 +407,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">April 19, 2011</td>
+<td class="right">April 22, 2011</td>
 </tr>
 
     	
@@ -415,15 +415,15 @@
   </table>
 
   <p class="title">The ERP Local Domain Name DHCPv6 Option<br />
-  <span class="filename">draft-ietf-hokey-ldn-discovery-08</span></p>
+  <span class="filename">draft-ietf-hokey-ldn-discovery-09</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
-<p>In order to derive a Domain-Specific Root Key (DSRK) from the Extended Master Session Key (EMSK) generated as a side-effect of an Extensible Authentication Protocol (EAP) method, the EAP peer must discover the name of the domain to which it is attached.  <br><br> This document specifies a Dynamic Host Configuration Protocol Version 6 (DHCPv6) option designed to allow a DHCPv6 server to inform clients using the  EAP Re-authentication Protocol (ERP) EAP method of the name of the local domain.  </p>
+<p>In order to derive a Domain-Specific Root Key (DSRK) from the Extended Master Session Key (EMSK) generated as a side-effect of an Extensible Authentication Protocol (EAP) method, the EAP peer must discover the name of the domain to which it is attached.  <br><br> This document specifies a Dynamic Host Configuration Protocol Version 6 (DHCPv6) option designed to allow a DHCPv6 server to inform clients using the  EAP Re-authentication Protocol (ERP) EAP method of the name of the local domain for ERP.  </p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 21, 2011.</p>
+<p>This Internet-Draft will expire on October 24, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -489,7 +489,7 @@
 <p> </p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> Option Format</h1>
-<p id="rfc.section.3.p.1">In DHCPv6-based local domain name discovery, the LDN option is used by the DHCPv6 client to obtain the local domain name from the DHCPv6 Server after full EAP authentication has taken place.  </p>
+<p id="rfc.section.3.p.1">In DHCPv6-based local domain name discovery, the LDN option is used by the DHCPv6 client to obtain the local domain name from the DHCPv6 Server after full EAP authentication has taken place.  <br><br> The contents of the ERP Local Domain Name option are intended only for use with ERP and do not represent the name of a local domain for any other purposes.  </p>
 <h1 id="rfc.section.3.1">
 <a href="#rfc.section.3.1">3.1.</a> DHCPv6 ERP Local Domain Name Option</h1>
 <div id="#rfc.figure.1"></div>
@@ -497,10 +497,10 @@
 0                   1                   2                   3
 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
 +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
-| OPTION_LOCAL_DOMAIN_NAME    |         option-length         |
+| OPTION_ERP_LOCAL_DOMAIN_NAME|         option-length         |
 +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
-| local-domain-name...
-+-+-+-+-+-+-+-+-+-+-+-+
+| erp-local-domain-name...
++-+-+-+-+-+-+-+-+-+-+-+-+-
 </pre>
 <p id="rfc.section.3.1.p.1">The format of this option is: </p>
 
@@ -510,19 +510,19 @@
 <br> OPTION_ERP_LOCAL_DOMAIN_NAME (TBD) </dd>
 <dt>option-length</dt>
 <dd style="margin-left: 8">
-<br> Length of the local-domain-name field, in octets </dd>
-<dt>local-domain-name</dt>
+<br> Length of the erp-local-domain-name field, in octets </dd>
+<dt>erp-local-domain-name</dt>
 <dd style="margin-left: 8">
-<br> This field contains the name of the local domain and MUST be encoded as specified in <a href="#RFC3315">Section 8 of RFC 3315</a> <cite title="NONE">[RFC3315]</cite> note that this encoding does enable the use of internationalized domain names, but only as a set of A-labels <a href="#RFC5890">[RFC5890]</a>.  </dd>
+<br> This field contains the name of the local ERP domain and MUST be encoded as specified in <a href="#RFC3315">Section 8 of RFC 3315</a> <cite title="NONE">[RFC3315]</cite>.  Note that this encoding does enable the use of internationalized domain names, but only as a set of A-labels <a href="#RFC5890">[RFC5890]</a>.  </dd>
 </dl>
 
 <p> </p>
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> Client Behavior</h1>
-<p id="rfc.section.4.p.1">If a DHCPv6 client doesn't know the local domain name and requires the DHCPv6 Server to provide the DHCPv6 LDN option, it MUST include an Option Request option requesting the DHCPv6 LDN option, as described in Section 22.7 of RFC 3315 <a href="#RFC3315">[RFC3315]</a>.  <br><br> When the DHCPv6 client recieves a LDN option with the local domain name present in it, it MUST verify that the option length is no more than 256 octets (the maximum length of a single fully-qualified domain name (FQDN) allowed by the DNS), and that the local domain name is a properly encoded single FQDN, as specified in Section 8, "Representation and Use of Domain Names" of  RFC3315 <a href="#RFC3315">[RFC3315]</a>.  </p>
+<p id="rfc.section.4.p.1">If a DHCPv6 client doesn't know the ERP LDN and requires the DHCPv6 Server to provide the DHCPv6 ERP LDN option, it MUST include an Option Request option requesting the DHCPv6  ERP Local Domain Name option, as described in Section 22.7 of RFC 3315 <a href="#RFC3315">[RFC3315]</a>.  <br><br> When the DHCPv6 client recieves an ERP Local Domain Name option with the ERP LDN present in it, it MUST verify that the option length is no more than 256 octets (the maximum length of a single fully-qualified domain name (FQDN) allowed by the DNS), and that the local domain name is a properly encoded single FQDN, as specified in Section 8, "Representation and Use of Domain Names" of  RFC3315 <a href="#RFC3315">[RFC3315]</a>.  </p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> Relay Agent Behavior</h1>
-<p id="rfc.section.5.p.1">If a DHCPv6 relay agent has pre-existing knowledge of the local domain name (for example, from a previous AAA exchange), it SHOULD include it in an instance of the DHCPv6 LDN option and forward to the DHCPv6 server as a suboption of the Relay-Supplied Options option <a href="#I-D.ietf-dhc-dhcpv6-relay-supplied-options">[I-D.ietf-dhc-dhcpv6-relay-supplied-options]</a>.  </p>
+<p id="rfc.section.5.p.1">If a DHCPv6 relay agent has pre-existing knowledge of the ERP local domain name for a client (for example, from a previous AAA exchange), it SHOULD include it in an instance of the DHCPv6 ERP  Local Domain Name option and forward to the DHCPv6 server as a suboption of the Relay-Supplied Options option <a href="#I-D.ietf-dhc-dhcpv6-relay-supplied-options">[I-D.ietf-dhc-dhcpv6-relay-supplied-options]</a>.  </p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#Security" id="Security">Security Considerations</a>
 </h1>
