--- a/draft-ietf-mpls-tp-uni-nni-02.html
+++ b/draft-ietf-mpls-tp-uni-nni-02.html
@@ -150,26 +150,25 @@
 --></style>
 </head>
 <body>
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">M. Bocci</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">L. Levrau</td></tr>
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc5921'>5921</a> (if&nbsp;approved)</td><td class="header">Alcatel-Lucent</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">D. Frost</td></tr>
-<tr><td class="header">Expires: May 30, 2011</td><td class="header">Cisco</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">November 26, 2010</td></tr>
+<tr><td class="header">Expires: June 10, 2011</td><td class="header">Cisco</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">December 7, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />MPLS Transport Profile User-to-Network
-    and Network-to-Network Interfaces<br />draft-ietf-mpls-tp-uni-nni-01</h1>
+    and Network-to-Network Interfaces<br />draft-ietf-mpls-tp-uni-nni-02</h1>
 
 <h3>Abstract</h3>
 
-<p>The framework for MPLS in transport networks <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a> provides reference models for an MPLS-TP
-      User-to-Network Interface (UNI), and an MPLS-TP Network-to-Network
-      interface (NNI). This document updates those reference models to show
-      detailed reference points for these interfaces, along with further
-      clarification of the functional architecture of MPLS-TP at a UNI and
-      NNI.
+<p>The framework for MPLS in transport networks (RFC 5921) provides
+      reference models for an MPLS Transport Profile (MPLS-TP) User-to-Network
+      Interface (UNI), and an MPLS-TP Network-to-Network Interface (NNI). This
+      document updates those reference models to show detailed reference
+      points for these interfaces, along with further clarification of the
+      functional architecture of MPLS-TP at a UNI and NNI.
 </p>
 <p>This document is a product of a joint Internet Engineering Task Force
       (IETF) / International Telecommunication Union Telecommunication
@@ -184,7 +183,7 @@
 </p>
 <p>[RFC Editor, please remove this note before publication as an RFC and
       insert the correct Streams Boilerplate to indicate that the published
-      RFC has IETF onsensus.]
+      RFC has IETF consensus.]
 </p>
 <h3>Status of this Memo</h3>
 <p>
@@ -201,7 +200,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on May 30, 2011.</p>
+This Internet-Draft will expire on June 10, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -217,43 +216,17 @@ to this document. Code Components extracted from this document must
 include Simplified BSD License text as described in Section 4.e of
 the Trust Legal Provisions and are provided without warranty as
 described in the Simplified BSD License.</p>
-<a name="toc"></a><br /><hr />
-<h3>Table of Contents</h3>
-<p class="toc">
-<a href="#anchor1">1.</a>&nbsp;
-Introduction<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor2">1.1.</a>&nbsp;
-Updates to the MPLS-TP UNI and NNI<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#anchor3">1.2.</a>&nbsp;
-Terminology and Abbreviations<br />
-<a href="#anchor4">2.</a>&nbsp;
-MPLS-TP User-to-Network Interface<br />
-<a href="#anchor5">3.</a>&nbsp;
-MPLS-TP Network-to-Network Interface<br />
-<a href="#IANA">4.</a>&nbsp;
-IANA Considerations<br />
-<a href="#Security">5.</a>&nbsp;
-Security Considerations<br />
-<a href="#Acknowledgements">6.</a>&nbsp;
-Acknowledgements<br />
-<a href="#rfc.references1">7.</a>&nbsp;
-Normative References<br />
-<a href="#rfc.authors">&#167;</a>&nbsp;
-Authors' Addresses<br />
-</p>
-<br clear="all" />
 
 <a name="anchor1"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.1"></a><h3>1.&nbsp;
 Introduction</h3>
 
 <p>The framework for MPLS in transport networks <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a> provides reference models for an MPLS-TP
       User-to-Network Interface (UNI), and an MPLS-TP Network-to-Network
-      interface (NNI). This document updates those reference models to show
+      Interface (NNI). This document updates those reference models to show
       detailed reference points for these interfaces, along with further
-      clarification of the functional architecture of MPLS-TP at a UNI and
-      NNI.
+      clarification of the functional architecture of the MPLS Transport
+      Profile (MPLS-TP) at a UNI and NNI.
 </p>
 <p>This document is a product of a joint Internet Engineering Task Force
       (IETF) / International Telecommunication Union Telecommunication
@@ -263,7 +236,6 @@ Introduction</h3>
       defined by the ITU-T.
 </p>
 <a name="anchor2"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.1.1"></a><h3>1.1.&nbsp;
 Updates to the MPLS-TP UNI and NNI</h3>
 
@@ -273,17 +245,16 @@ Updates to the MPLS-TP UNI and NNI</h3>
         figures illustrate the UNI and the NNI as a span. However, it is more
         conventional to illustrate these interfaces as reference points.
         Furthermore, in the case of a UNI, it is useful to illustrate the
-        distribution of UNI functions between the CE side and the PE side of
-        the UNI (the UNI-C and UNI-N).
+        distribution of UNI functions between the Customer Edge (CE) side and
+        the Provider Edge (PE) side of the UNI (the UNI-C and UNI-N).
 </p>
 <p>This document provides updated illustrations of the MPLS-TP UNI and
-        MPLS-TP NNI to show these additional details. These illustrations are
-        intended to obsolete the corresponding ones in <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a>. This document also defines additional
-        terminology referenced in the illustrations. No other updates are
-        proposed by this document.
+        MPLS-TP NNI to show these additional details. These illustrations
+        obsolete the corresponding ones in <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a>.
+        This document also defines additional terminology referenced in the
+        illustrations. No other updates are made by this document.
 </p>
 <a name="anchor3"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.1.2"></a><h3>1.2.&nbsp;
 Terminology and Abbreviations</h3>
 
@@ -324,11 +295,10 @@ Terminology and Abbreviations</h3>
 <p>
 </p>
 <a name="anchor4"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 MPLS-TP User-to-Network Interface</h3>
 
-<p>The MPLS-TP User-Network interface (UNI) is illustrated in <a class='info' href='#tp-uni'>Figure&nbsp;1<span> (</span><span class='info'>UNI Between CE Node and MPLS-TP PE Node</span><span>)</span></a>. This figure obsoletes Figure 3 of <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a>. Note that the term MPLS UNI is to be
+<p>The MPLS-TP User-Network Interface (UNI) is illustrated in <a class='info' href='#tp-uni'>Figure&nbsp;1<span> (</span><span class='info'>UNI Between CE Node and MPLS-TP PE Node</span><span>)</span></a>. This figure obsoletes Figure 3 of <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a>. Note that the term MPLS-TP UNI is to be
       interpreted as a UNI to an MPLS-TP network and does not refer to the
       protocol transiting the UNI. The UNI for a particular client flow may
       involve signaling between the CE and PE. If signaling is used, it may
@@ -341,7 +311,7 @@ MPLS-TP User-to-Network Interface</h3>
                         :                             MPLS-TP
     :&lt;-- UNI-C --&gt;:     :     :&lt;-- UNI-N -&gt;:          Network &lt;-----&gt;
     :  function   :     :     :  function  :
-     -------------      :      ------------:--------------------
+   ---------------      :      ------------:--------------------
     :             |     :     |            :   Transport        |
     :             |     V     |    Native  :     Path           |
     :             |           |   Service  :   Mux/Demux        |
@@ -370,19 +340,17 @@ MPLS-TP User-to-Network Interface</h3>
     :             |           |            :          Transport |
     :             |           |            :             Path   |
     :             |           |            :          Data Plane|
-     -------------             ---------------------------------
+   ---------------             ---------------------------------
 
    Customer Edge Node              MPLS-TP Provider Edge Node
 
 Note: Native service control = Control plane belonging to the native
                                service and/or GMPLS UNI
-      TSI = Transport Service Instance
 </pre></div><p>
 <table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;Figure&nbsp;1: UNI Between CE Node and MPLS-TP PE Node&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
 </p>
 <a name="anchor5"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3"></a><h3>3.&nbsp;
 MPLS-TP Network-to-Network Interface</h3>
 
@@ -431,14 +399,11 @@ TSI+=| |==|Processing|===|  |&lt;+===TSI===+&gt;|  |===|Processing|==| |=+TSI
         MPLS-TP Provider                        MPLS-TP Provider
           Edge Node A                             Edge Node B
 
-
-      TSI = Transport Service Instance
 </pre></div><p>
 <table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;Figure&nbsp;2: NNI Between MPLS-TP PE Nodes&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
 </p>
 <a name="IANA"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4"></a><h3>4.&nbsp;
 IANA Considerations</h3>
 
@@ -448,16 +413,14 @@ IANA Considerations</h3>
       RFC.
 </p>
 <a name="Security"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5"></a><h3>5.&nbsp;
 Security Considerations</h3>
 
-<p>The security considerations of RFC5921 apply. The updated reference
-      models provided by this document introduce no new security
-      considerations.
+<p>The security considerations of <a class='info' href='#RFC5921'>[RFC5921]<span> (</span><span class='info'>Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;A Framework for MPLS in Transport Networks,&rdquo; July&nbsp;2010.</span><span>)</span></a> apply.
+      The updated reference models provided by this document introduce no new
+      security considerations.
 </p>
 <a name="Acknowledgements"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6"></a><h3>6.&nbsp;
 Acknowledgements</h3>
 
@@ -478,22 +441,19 @@ Acknowledgements</h3>
 </li>
 <li>Italo Busi.
 </li>
-<li>The participants of ITU-T Study Group 15.
+<li>The experts of ITU-T Study Group 15 and the IETF MPLS and PWE3
+          working groups.
 </li>
 </ul>
 
 <a name="rfc.references1"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>7.&nbsp;Normative References</h3>
 <table width="99%" border="0">
-<tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
-<td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="http://www.rfc-editor.org/rfc/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5921">[RFC5921]</a></td>
 <td class="author-text">Bocci, M., Bryant, S., Frost, D., Levrau, L., and L. Berger, &ldquo;<a href="http://tools.ietf.org/html/rfc5921">A Framework for MPLS in Transport Networks</a>,&rdquo; RFC&nbsp;5921, July&nbsp;2010 (<a href="http://www.rfc-editor.org/rfc/rfc5921.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.authors"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <h3>Authors' Addresses</h3>
 <table width="99%" border="0" cellpadding="0" cellspacing="0">
 <tr><td class="author-text">&nbsp;</td>
@@ -507,30 +467,14 @@ Acknowledgements</h3>
 <td class="author-text">Lieven Levrau</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Alcatel-Lucent</td></tr>
-<tr><td class="author-text">&nbsp;</td>
-<td class="author-text"></td></tr>
-<tr><td class="author" align="right">Phone:&nbsp;</td>
-<td class="author-text"></td></tr>
-<tr><td class="author" align="right">Fax:&nbsp;</td>
-<td class="author-text"></td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:lieven.levrau@alcatel-lucent.com">lieven.levrau@alcatel-lucent.com</a></td></tr>
-<tr><td class="author" align="right">URI:&nbsp;</td>
-<td class="author-text"><a href=""></a></td></tr>
 <tr cellpadding="3"><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Dan Frost</td></tr>
 <tr><td class="author-text">&nbsp;</td>
 <td class="author-text">Cisco</td></tr>
-<tr><td class="author-text">&nbsp;</td>
-<td class="author-text"></td></tr>
-<tr><td class="author" align="right">Phone:&nbsp;</td>
-<td class="author-text"></td></tr>
-<tr><td class="author" align="right">Fax:&nbsp;</td>
-<td class="author-text"></td></tr>
 <tr><td class="author" align="right">Email:&nbsp;</td>
 <td class="author-text"><a href="mailto:danfrost@cisco.com">danfrost@cisco.com</a></td></tr>
-<tr><td class="author" align="right">URI:&nbsp;</td>
-<td class="author-text"><a href=""></a></td></tr>
 </table>
 </body></html>
