--- a/draft-ietf-httpstate-cookie-23.html
+++ b/draft-ietf-httpstate-cookie-23.html
@@ -421,8 +421,8 @@
   <meta name="dct.identifier" content="urn:ietf:id:draft-sample-input-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2010-12" />
   
-  <meta name="dct.abstract" content="This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet." />
-  <meta name="description" content="This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet." />
+  <meta name="dct.abstract" content="This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet.  This document obsoletes " />
+  <meta name="description" content="This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet.  This document obsoletes " />
   <meta name="keywords" content="" />
 
 </head>
@@ -442,14 +442,14 @@
 </tr>
 <tr>
 <td class="left">Obsoletes: 2965 (if approved)</td>
-<td class="right">February 18, 2011</td>
+<td class="right">March 01, 2011</td>
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
 <td class="right"></td>
 </tr>
 <tr>
-<td class="left">Expires: August 22, 2011</td>
+<td class="left">Expires: September 02, 2011</td>
 <td class="right"></td>
 </tr>
 
@@ -458,17 +458,17 @@
   </table>
 
   <p class="title">HTTP State Management Mechanism <br />
-  <span class="filename">draft-ietf-httpstate-cookie-22</span></p>
+  <span class="filename">draft-ietf-httpstate-cookie-23</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
-<p>This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet.</p>
+<p>This document defines the HTTP Cookie and Set-Cookie header fields.  These header fields can be used by HTTP servers to store state (called cookies) at HTTP user agents, letting the servers maintain a stateful session over the mostly stateless HTTP protocol. Although cookies have many historical infelicities that degrade their security and privacy, the Cookie and Set-Cookie header fields are widely used on the Internet.  This document obsoletes <a href="#RFC2965">[RFC2965]</a>.</p>
 <h1><a>Editorial Note (To be removed by RFC Editor)</a></h1>
 <p>If you have suggestions for improving this document, please send email to <a href="mailto:http-state@ietf.org">mailto:http-state@ietf.org</a>. Suggestions with test cases are especially appreciated.  Further Working Group information is available from <a href="https://tools.ietf.org/wg/httpstate/">https://tools.ietf.org/wg/httpstate/</a>.</p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 22, 2011.</p>
+<p>This Internet-Draft will expire on September 02, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -637,7 +637,7 @@
 <a href="#rfc.section.2.2">2.2.</a> <a href="#syntax-notation" id="syntax-notation">Syntax Notation</a>
 </h1>
 <p id="rfc.section.2.2.p.1">This specification uses the Augmented Backus-Naur Form (ABNF) notation of <a href="#RFC5234">[RFC5234]</a>.</p>
-<p id="rfc.section.2.2.p.2">The following core rules are included by reference, as defined in <a href="#RFC5234">[RFC5234]</a>, Appendix B.1: ALPHA (letters), CR (carriage return), CRLF (CR LF), CTL (controls), DIGIT (decimal 0-9), DQUOTE (double quote), HEXDIG (hexadecimal 0-9/A-F/a-f), LF (line feed), NUL (null octet), OCTET (any 8-bit sequence of data except NUL), SP (space), HTAB (horizontal tab), CHAR (any US-ASCII character), VCHAR (any visible US-ASCII character), and WSP (whitespace).</p>
+<p id="rfc.section.2.2.p.2">The following core rules are included by reference, as defined in <a href="#RFC5234">[RFC5234]</a>, Appendix B.1: ALPHA (letters), CR (carriage return), CRLF (CR LF), CTL (controls), DIGIT (decimal 0-9), DQUOTE (double quote), HEXDIG (hexadecimal 0-9/A-F/a-f), LF (line feed), NUL (null octet), OCTET (any 8-bit sequence of data except NUL), SP (space), HTAB (horizontal tab), CHAR (any <a href="#USASCII">[USASCII]</a> character), VCHAR (any visible <a href="#USASCII">[USASCII]</a> character), and WSP (whitespace).</p>
 <div id="#rfc.figure.1"></div>
 <pre>
 OWS            = *( [ obs-fold ] WSP )
@@ -736,8 +736,11 @@ set-cookie-header = "Set-Cookie:" SP set-cookie-string
 set-cookie-string = cookie-pair *( ";" SP cookie-av )
 cookie-pair       = cookie-name "=" cookie-value
 cookie-name       = token
-cookie-value      = token / *base64-character
-base64-character  = ALPHA / DIGIT / "+" / "/" / "="
+cookie-value      = *cookie-octet / ( DQUOTE *cookie-octet DQUOTE )
+cookie-octet      = %x21 / %x23-2B / %x2D-3A / %x3C-5B / %x5D-7E
+                      ; US-ASCII characters excluding CTLs,
+                      ; whitespace DQUOTE, comma, semicolon,
+                      ; and backslash
 token             = &lt;token, defined in [RFC2616], Section 2.2&gt;
 
 cookie-av         = expires-av / max-age-av / domain-av /
@@ -746,8 +749,9 @@ cookie-av         = expires-av / max-age-av / domain-av /
 expires-av        = "Expires=" sane-cookie-date
 sane-cookie-date  = &lt;rfc1123-date, defined in [RFC2616], Section 3.3.1&gt;
 max-age-av        = "Max-Age=" non-zero-digit *DIGIT
-                      ; In practice, both expires-av and max-age-av are limited
-                      ; to dates representable by the user agent.
+                      ; In practice, both expires-av and max-age-av
+                      ; are limited to dates representable by the
+                      ; user agent.
 non-zero-digit    = %x31-39
                       ; digits 1 through 9
 domain-av         = "Domain=" domain-value
@@ -1219,7 +1223,7 @@ time-field      = 1*2DIGIT
 <h1 id="rfc.section.7.3">
 <a href="#rfc.section.7.3">7.3.</a> <a href="#expiration-dates" id="expiration-dates">Expiration Dates</a>
 </h1>
-<p id="rfc.section.7.3.p.1">Although servers can set the expiration date for cookies to the distant future, most user agents do not actually retain cookies for multiple decades.  Rather than chosing gratiously long expiration periods, servers SHOULD promote user privacy by selecting reasonable cookie expiration periods based on the purpose of the cookie.  For example, a typical session identifier might reasonably be set to expire in two weeks.</p>
+<p id="rfc.section.7.3.p.1">Although servers can set the expiration date for cookies to the distant future, most user agents do not actually retain cookies for multiple decades.  Rather than chosing gratuitously long expiration periods, servers SHOULD promote user privacy by selecting reasonable cookie expiration periods based on the purpose of the cookie.  For example, a typical session identifier might reasonably be set to expire in two weeks.</p>
 <h1 id="rfc.section.8">
 <a href="#rfc.section.8">8.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a>
 </h1>
@@ -1348,14 +1352,14 @@ time-field      = 1*2DIGIT
 <a href="mailto:dcrocker@bbiw.net" title="Brandenburg InternetWorking">Crocker, D.</a> and <a href="mailto:paul.overell@thus.net" title="THUS plc.">P. Overell</a>, "<a href="http://tools.ietf.org/html/rfc5234">Augmented BNF for Syntax Specifications: ABNF </a>", STD 68, RFC 5234, January 2008.</td>
 </tr>
 <tr>
-<td class="reference"><b id="RFC5246">[RFC5246]</b></td>
-<td class="top">
-<a>Dierks, T.</a> and <a>E. Rescorla</a>, "<a href="http://tools.ietf.org/html/rfc5246">The Transport Layer Security (TLS) Protocol Version 1.2 </a>", RFC 5246, August 2008.</td>
-</tr>
-<tr>
 <td class="reference"><b id="RFC5890">[RFC5890]</b></td>
 <td class="top">
 <a>Klensin, J.</a>, "<a href="http://tools.ietf.org/html/rfc5890">Internationalized Domain Names for Applications (IDNA): Definitions and Document Framework</a>", RFC 5890, August 2010.</td>
+</tr>
+<tr>
+<td class="reference"><b id="USASCII">[USASCII]</b></td>
+<td class="top">
+<a>American National Standards Institute</a>, "<a>Coded Character Set -- 7-bit American Standard Code for Information Interchange</a>", ANSI X3.4, 1986.</td>
 </tr>
 </tbody></table>
 <h1 id="rfc.references.2">
